[tool.poetry]
name = "glab-menu"
version = "0.1.0"
description = ""
authors = ["Will Pimblett <github@wjdp.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-gitlab = "^5.0.0"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
glab-menu = "glab_menu.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
